// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsToggle > Updates value on click 1`] = `
<div>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between py-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] max-w-[var(--c-max-w)] media-xl:max-w-[var(--cC-max-w)]"
      style="--c-max-w: 80%; --cC-max-w: 70%;"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Test toggle
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Test description
        </span>
      </div>
    </div>
    <button
      aria-checked="false"
      aria-selected="false"
      data-testid="testId"
      role="switch"
      style="appearance: none; margin: 0px; outline: none; position: relative; box-sizing: border-box; display: flex; flex-direction: row; align-items: center; justify-content: flex-start; height: 32px; width: 60px; min-height: 32px; min-width: 60px; flex-shrink: 0; padding: 4px; border-radius: 9999px; background-color: rgba(19, 19, 19, 0.35); cursor: pointer; pointer-events: auto; transition: background-color 80ms ease-in-out;"
      type="button"
    >
      <span
        style="position: relative; box-sizing: border-box; display: flex; align-items: center; justify-content: center; min-height: 24px; width: 24px; border-radius: 9999px; background-color: rgb(255, 255, 255); transform: translateX(0px); transition: transform 80ms ease-in-out, background-color 80ms ease-in-out;"
      >
        <span
          style="display: flex; align-items: center; justify-content: center; opacity: 0; transform: translateX(0px); transition: opacity 100ms ease-in-out, transform 100ms ease-in-out;"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="8"
            style="width: 14px; height: 14px; color: rgb(255, 55, 199);"
            viewBox="0 0 48 48"
          >
            <line
              stroke="currentColor"
              x1="11"
              x2="18"
              y1="26"
              y2="33"
            />
            <line
              stroke="currentColor"
              x1="18"
              x2="38"
              y1="33"
              y2="14"
            />
          </svg>
        </span>
        <span
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: -2; box-sizing: border-box; min-height: 24px; width: 24px; border-radius: 9999px; background-color: rgb(255, 255, 255); transform: translateX(0px); transition: width 80ms ease-in-out, transform 80ms ease-in-out, background-color 80ms ease-in-out;"
        />
      </span>
      <span
        style="position: absolute; top: -6px; right: -6px; bottom: -6px; left: -6px; z-index: -2; border-radius: 9999px; border-style: solid; border-width: 1px; border-color: transparent; pointer-events: none;"
      />
      <span
        style="position: absolute; top: -5px; right: -5px; bottom: -5px; left: -5px; z-index: -1; border-radius: 9999px; border-style: solid; border-width: 2px; border-color: transparent; pointer-events: none;"
      />
    </button>
  </div>
</div>
`;

exports[`SettingsToggle > renders with icon 1`] = `
<div>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between py-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] max-w-[var(--c-max-w)] media-xl:max-w-[var(--cC-max-w)]"
      style="--c-max-w: 80%; --cC-max-w: 70%;"
    >
      <svg
        fill="none"
        stroke-width="8"
        style="width: 24px; height: 24px;"
        viewBox="0 0 20 20"
      >
        <path
          d="M19.1833 7.5C19.1833 8.42 18.4367 9.16667 17.5167 9.16667C17.2817 9.16667 17.0583 9.11663 16.855 9.02913L14.0458 11.8384C14.1333 12.0417 14.1842 12.2642 14.1842 12.5C14.1842 13.42 13.4375 14.1667 12.5175 14.1667C11.5975 14.1667 10.8467 13.42 10.8467 12.5C10.8467 12.2725 10.8925 12.0558 10.975 11.8575L8.15584 9.03829C7.95917 9.11996 7.74333 9.16585 7.5175 9.16585C7.2825 9.16585 7.05918 9.11582 6.85584 9.02832L4.04667 11.8376C4.13417 12.0409 4.18501 12.2634 4.18501 12.4992C4.18501 13.4192 3.43834 14.1659 2.51834 14.1659C1.59834 14.1659 0.847504 13.4192 0.847504 12.4992C0.847504 11.5792 1.58917 10.8325 2.51 10.8325H2.51834C2.74501 10.8325 2.96 10.8784 3.15667 10.9601L5.97667 8.14006C5.89417 7.94256 5.8475 7.72585 5.8475 7.49919C5.8475 6.57919 6.58917 5.83252 7.51 5.83252H7.51834C8.43834 5.83252 9.18501 6.57919 9.18501 7.49919C9.18501 7.73419 9.13501 7.95747 9.04667 8.16081L11.8533 10.9674C12.0542 10.8807 12.2758 10.8325 12.5092 10.8325H12.5175C12.7442 10.8325 12.9592 10.8784 13.1558 10.9601L15.9758 8.14006C15.8933 7.94256 15.8467 7.72585 15.8467 7.49919C15.8467 6.57919 16.5883 5.83252 17.5092 5.83252H17.5175C18.4375 5.83335 19.1833 6.58 19.1833 7.5Z"
          fill="currentColor"
        />
      </svg>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Allow analytics
        </span>
      </div>
    </div>
    <button
      aria-checked="true"
      aria-selected="true"
      role="switch"
      style="appearance: none; margin: 0px; outline: none; position: relative; box-sizing: border-box; display: flex; flex-direction: row; align-items: center; justify-content: flex-start; height: 32px; width: 60px; min-height: 32px; min-width: 60px; flex-shrink: 0; padding: 4px; border-radius: 9999px; background-color: rgb(255, 55, 199); cursor: pointer; pointer-events: auto; transition: background-color 80ms ease-in-out;"
      type="button"
    >
      <span
        style="position: relative; box-sizing: border-box; display: flex; align-items: center; justify-content: center; min-height: 24px; width: 24px; border-radius: 9999px; background-color: rgb(255, 255, 255); transform: translateX(28px); transition: transform 80ms ease-in-out, background-color 80ms ease-in-out;"
      >
        <span
          style="display: flex; align-items: center; justify-content: center; opacity: 1; transform: translateX(0px); transition: opacity 100ms ease-in-out, transform 100ms ease-in-out;"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="8"
            style="width: 14px; height: 14px; color: rgb(255, 55, 199);"
            viewBox="0 0 48 48"
          >
            <line
              stroke="currentColor"
              x1="11"
              x2="18"
              y1="26"
              y2="33"
            />
            <line
              stroke="currentColor"
              x1="18"
              x2="38"
              y1="33"
              y2="14"
            />
          </svg>
        </span>
        <span
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: -2; box-sizing: border-box; min-height: 24px; width: 24px; border-radius: 9999px; background-color: rgb(255, 255, 255); transform: translateX(0px); transition: width 80ms ease-in-out, transform 80ms ease-in-out, background-color 80ms ease-in-out;"
        />
      </span>
      <span
        style="position: absolute; top: -6px; right: -6px; bottom: -6px; left: -6px; z-index: -2; border-radius: 9999px; border-style: solid; border-width: 1px; border-color: transparent; pointer-events: none;"
      />
      <span
        style="position: absolute; top: -5px; right: -5px; bottom: -5px; left: -5px; z-index: -1; border-radius: 9999px; border-style: solid; border-width: 2px; border-color: transparent; pointer-events: none;"
      />
    </button>
  </div>
</div>
`;
